deploy/app.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: site
  labels:
    app: site
    env: prod
spec:
  replicas: 1
  selector:
    app: site
    env: prod
  triggers:
    - type: ImageChange
      imageChangeParams:
        containerNames:
          - site
        from:
          kind: ImageStreamTag
          name: site:prod-latest
  template:
    metadata:
      labels:
        app: site
        env: prod
    spec:
      containers:
        - name: site
          image: kscout/site:prod-latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: site
  labels:
    app: site
    env: prod
spec:
  type: ClusterIP
  selector:
    app: site
    env: prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: site-www
  labels:
    app: site
    env: prod
spec:
  host: www.kscout.io
  path: /
  to:
    kind: Service
    name: site
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
status:
  ingress:
    - host: www.kscout.io
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: site-apex
  labels:
    app: site
    env: prod
spec:
  host: kscout.io
  path: /
  to:
    kind: Service
    name: site
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
status:
  ingress:
    - host: kscout.io
